--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,19 @@
         "start": "ts-node src/index.ts",
         "dev": "vite",
         "build": "tsc && vite build",
-  "preview": "vite preview"
+        "preview": "vite preview"
     },
     "dependencies": {
         "@fastify/cors": "^11.0.1",
+        "@types/express": "^5.0.1",
         "cors": "^2.8.5",
+        "express": "^5.1.0",
         "fastify": "^5.0.0",
         "lowdb": "^7.0.1",
         "zod": "^3.23.8"
     },
     "devDependencies": {
-        "@types/cors": "^2.8.17",
+        "@types/cors": "^2.8.18",
         "@types/node": "^22.7.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.2"
