--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,15 @@
         "react-dom": "^18.2.0",
         "react-query": "^3.39.3",
         "react-router-dom": "^6.26.2",
+        "react-toastify": "^11.0.5",
         "rimraf": "^6.0.1",
         "zod": "^3.24.4",
-        "zustand": "^4.5.5"
+        "zustand": "^4.5.6"
     },
     "devDependencies": {
         "@types/node": "^22.7.4",
-        "@types/react": "^18.3.8",
-        "@types/react-dom": "^18.3.0",
+        "@types/react": "^18.3.21",
+        "@types/react-dom": "^18.3.7",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.47",
