Add custom build script and debug logging for Vercel build

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "prebuild": "node -v && npm list vite || echo 'vite not found'",
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "./build.sh",
         "preview": "vite preview"
     },
     "dependencies": {
