--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,15 +1,20 @@
 {
     "builds": [
       {
-        "src": "client/package.json",
+        "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "dist"
         }
       }
     ],
-    
     "framework": "vite",
-    "installCommand": "cd client && ./debug.sh",
-    "buildCommand": "cd client && yarn build"
+    "installCommand": "yarn install",
+    "buildCommand": "yarn build && ls -la dist",
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ]
   }
