--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "client"
-  command = "npm run build"
-  publish = "client/dist"
+  command = "npm run build && ls -la dist"
+  publish = "dist"
 
 [[redirects]]
   from = "/*"
