Ensure API calls use Netlify Function URL

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,10 +1,7 @@
 [build]
   base = "client"
   command = "npm run build && ls -la dist"
-  publish = "dist"
-
-[functions]
-  directory = "netlify/functions"
+  publish = "client/dist"
 
 [[redirects]]
   from = "/*"
