--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  base = "client"
-  command = "npm run build && ls -la dist"
-  publish = "dist"
+  command = "cd client && npm run build && ls -la dist"
+  publish = "client/dist"
 
 [functions]
   directory = "netlify/functions"
