--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "cd client && npm run build && ls -la dist"
   publish = "client/dist"
+  environment = { NODE_VERSION = "18" }
 
 [functions]
   directory = "netlify/functions"
