--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "cd client && npm run build && ls -la dist"
+  command = "cd client && npm install && npm run build && ls -la dist"
   publish = "client/dist"
   environment = { NODE_VERSION = "18" }
 
