--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,28 @@
 {
     "name": "restaurant-profit-pro-server",
     "version": "1.0.0",
-    "scripts": {
-        "start": "ts-node src/index.ts"
+    "type": "module",
+    "main": "index.js",
+    "engines": {
+        "node": "22.x"
     },
+    "scripts": {
+      "start": "node --loader ts-node/esm src/index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
     "dependencies": {
-        "cors": "^2.8.5",
-        "express": "^5.1.0",
-        "lowdb": "^7.0.1",
-        "zod": "^3.23.8"
+      "axios": "^1.6.2",
+      "cors": "^2.8.5",
+      "express": "^4.18.2",
+      "lowdb": "^7.0.1"
     },
     "devDependencies": {
-        "@types/cors": "^2.8.18",
-        "@types/express": "^5.0.1",
-        "@types/node": "^22.7.4",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.6.2"
+      "@types/cors": "^2.8.17",
+      "@types/express": "^4.17.21",
+      "@types/node": "^20.10.0",
+      "ts-node": "^10.9.1",
+      "typescript": "^5.3.2"
     }
-}
+  }
