--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,13 @@
     "name": "restaurant-profit-pro-server",
     "version": "1.0.0",
     "type": "module",
-    "main": "index.js",
+    "main": "dist/index.js",
     "engines": {
-        "node": "22.x"
+      "node": "22.x"
     },
     "scripts": {
-      "start": "node --loader ts-node/esm src/index.ts"
+      "build": "tsc",
+      "start": "node dist/index.js"
     },
     "keywords": [],
     "author": "",
